Implements the functionality that allows to delete a course an the respective endpoint